[package]
name = "examples-storage"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
description = "Account abstraction (ERC-433) examples - storage options"
homepage = "https://github.com/silius-rs/silius/tree/main/examples/storage"

[dependencies]
# silius dependencies
silius-contracts = { workspace = true }  # replace with git url: git = "https://github.com/silius-rs/silius.git"
silius-mempool = { workspace = true, features = ["mdbx"] }    # replace with git url: git = "https://github.com/silius-rs/silius.git"
silius-primitives = { workspace = true } # replace with git url: git = "https://github.com/silius-rs/silius.git"

# eth
alloy-chains = { workspace = true }
ethers = { workspace = true }

# async
futures = { workspace = true }
parking_lot = { workspace = true }

# tokio
tokio = { workspace = true }

# misc
eyre = { workspace = true }
tempfile =  { workspace = true }

[[example]]
name = "memory"
path = "examples/memory.rs"

[[example]]
name = "database"
path = "examples/database.rs"
