[package]
name = "examples-user-operation"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
description = "Account abstraction (ERC-433) examples - user operation"
homepage = "https://github.com/silius-rs/silius/tree/main/examples/user-operation"

[dependencies]
# silius dependencies
silius-primitives = { workspace = true } # replace with git url: git = "https://github.com/silius-rs/silius.git"

# eth
ethers = { workspace = true }

# tokio
tokio = { workspace = true }

# misc
eyre = { workspace = true }

[[example]]
name = "user_operation"
path = "examples/user_operation.rs"
